# golang-structure

./: .gitignore  .go-arch-lint.yml  BUILD  Makefile  README.md  WORKSPACE  go.mod  go.sum
.github/: .golangci.yml
docker/development/: docker-compose.yml
docker/test/: docker-compose.yml
lib/config/: BUILD.bazel  config_cors.go  config_db.go  config_log.go  config_swagger.go  config_tracer.go
lib/domain/: BUILD.bazel  context.go  validator.go
lib/errors/: BUILD.bazel  errors.go  fun.go  fun_test.go
lib/gateway/: BUILD.bazel  db.go  db_mysql.go  db_sqlite.go  init.go  metrics_server.go  signal_watch.go
lib/log/: log.go  log_handler.go
scripts/: dev-reset.sh  dev-up.sh
src/: BUILD.bazel  main.go
src/config/: BUILD.bazel  config.go  local.yml  production.yml
src/controller/: BUILD.bazel  app_router.go  document_handler.go
src/controller/converter/: BUILD.bazel  document_converter.go
src/controller/entity/: BUILD.bazel  document_entity.go
src/controller/helper/: BUILD.bazel  gin_helper.go
src/controller/middleware/: BUILD.bazel  init.go  tracelog_middleware.go  wait_middleware.go
src/domain/: BUILD.bazel
src/domain/model/: document_model.go  document_repository.go  document_writer_model.go
src/domain/service/: BUILD.bazel  document.go  document_repository.go  repository_factory.go  transaction_manager.go
src/gateway/: BUILD.bazel  document_repository.go  init.go  repository_factory.go  transaction.go
src/log/: log.go
src/sqls/: BUILD.bazel  drop.sql  sqls.go
src/sqls/mysql/: 2020010102_create_app_user.up.sql  2020010202_insert_app_user.up.sql  2021010103_create_document.up.sql  2021010104_create_user_document.up.sql  2021010205_insert_document.up.sql  2021010206_insert_user_document.up.sql
src/sqls/sqlite3/: 2020010101_create_organization.up.sql  2020010102_create_app_user.up.sql  2021010103_create_article.up.sql  2021010104_create_user_workbook.up.sql
src/usecase/: BUILD.bazel  user_usecase_workbook.go
tools/: parser.go  parser2.go.txt
user/domain/model/: app_user_model.go  base_model.go
