load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "errors",
    srcs = [
        "errors.go",
        "fun.go",
    ],
    importpath = "github.com/pecolynx/golang-structure/lib/errors",
    visibility = ["//visibility:public"],
    deps = ["@org_golang_x_xerrors//:xerrors"],
)

go_test(
    name = "errors_test",
    srcs = ["fun_test.go"],
    embed = [":errors"],
)
