load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "gateway",
    srcs = [
        "db.go",
        "db_mysql.go",
        "db_sqlite.go",
        "init.go",
        "metrics_server.go",
        "signal_watch.go",
    ],
    importpath = "github.com/pecolynx/golang-structure/lib/gateway",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/errors",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_go_sql_driver_mysql//:mysql",
        "@com_github_golang_migrate_migrate_v4//:migrate",
        "@com_github_golang_migrate_migrate_v4//database",
        "@com_github_golang_migrate_migrate_v4//database/mysql",
        "@com_github_golang_migrate_migrate_v4//database/sqlite3",
        "@com_github_golang_migrate_migrate_v4//source",
        "@com_github_golang_migrate_migrate_v4//source/file",
        "@com_github_golang_migrate_migrate_v4//source/iofs",
        "@com_github_mattn_go_sqlite3//:go-sqlite3",
        "@com_github_onrik_gorm_logrus//:gorm-logrus",
        "@com_github_prometheus_client_golang//prometheus/promhttp",
        "@com_github_sirupsen_logrus//:logrus",
        "@io_gorm_driver_mysql//:mysql",
        "@io_gorm_driver_sqlite//:sqlite",
        "@io_gorm_gorm//:gorm",
    ],
)
