load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "config",
    srcs = ["config.go"],
    embedsrcs = [
        "local.yml",
        "production.yml",
    ],
    importpath = "github.com/pecolynx/golang-structure/src/config",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/config",
        "//lib/domain",
        "//lib/errors",
        "@in_gopkg_yaml_v2//:yaml_v2",
    ],
)
