load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "controller",
    srcs = [
        "app_router.go",
        "article_handler.go",
    ],
    importpath = "github.com/pecolynx/golang-structure/src/controller",
    visibility = ["//visibility:public"],
    deps = [
        "//src/config",
        "//src/controller/middleware",
        "//src/usecase",
        "@com_github_gin_contrib_cors//:cors",
        "@com_github_gin_gonic_gin//:gin",
        "@com_github_onrik_logrus//gin",
    ],
)
