load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "domain",
    srcs = [
        "article_model.go",
        "model.go",
    ],
    importpath = "github.com/pecolynx/golang-structure/src/domain",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/domain",
        "//lib/errors",
    ],
)
