load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "gateway",
    srcs = [
        "article_repository.go",
        "repository_factory.go",
        "transaction.go",
    ],
    importpath = "github.com/pecolynx/golang-structure/src/gateway",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/errors",
        "//src/service",
        "@io_gorm_gorm//:gorm",
    ],
)
