load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "sqls",
    srcs = ["sqls.go"],
    embedsrcs = [
        "mysql/2020030101_create_job_status.up.sql",
        "mysql/2020030102_create_job_history.up.sql",
        "mysql/2020010101_create_organization.up.sql",
        "mysql/2020010102_create_app_user.up.sql",
        "mysql/2020010103_create_user_role.up.sql",
        "mysql/2020010104_create_space.up.sql",
        "mysql/2020010105_create_app_user_group.up.sql",
        "mysql/2020010106_create_group_user.up.sql",
        "mysql/2020010108_create_user_space.up.sql",
        "mysql/2020010201_insert_organization.up.sql",
        "mysql/2020010202_insert_app_user.up.sql",
        "mysql/2021010101_create_problem_type.up.sql",
        "mysql/2021010102_create_study_type.up.sql",
        "mysql/2021010103_create_workbook.up.sql",
        "mysql/2021010104_create_user_workbook.up.sql",
        "mysql/2021010105_create_user_quota.up.sql",
        "mysql/2021010106_create_quota_limit.up.sql",
        "mysql/2021010107_create_recordbook.up.sql",
        "mysql/2021010108_create_study_record.up.sql",
        "mysql/2021010109_create_study_stat.up.sql",
        "mysql/2021010201_insert_problem_type.up.sql",
        "mysql/2021010202_insert_study_type.up.sql",
        "mysql/2022010101_create_english_sentence_problem.up.sql",
        "mysql/2022010102_create_english_phrase_problem.up.sql",
        "mysql/2022010103_create_english_word_problem.up.sql",
        "mysql/2022010104_create_template_problem.up.sql",
        "mysql/2020010109_create_user_preference.up.sql",
        "sqlite3/2020010101_create_organization.up.sql",
        "sqlite3/2020010102_create_app_user.up.sql",
        "sqlite3/2020010103_create_user_role.up.sql",
        "sqlite3/2020010104_create_space.up.sql",
        "sqlite3/2020010105_create_app_user_group.up.sql",
        "sqlite3/2020010106_create_group_user.up.sql",
        "sqlite3/2020010108_create_user_space.up.sql",
        "sqlite3/2020010201_insert_organization.up.sql",
        "sqlite3/2020010202_insert_app_user.up.sql",
        "sqlite3/2020030101_create_job_status.up.sql",
        "sqlite3/2020030102_create_job_history.up.sql",
        "sqlite3/2021010101_create_problem_type.up.sql",
        "sqlite3/2021010102_create_study_type.up.sql",
        "sqlite3/2021010103_create_workbook.up.sql",
        "sqlite3/2021010104_create_user_workbook.up.sql",
        "sqlite3/2021010105_create_user_quota.up.sql",
        "sqlite3/2021010106_create_quota_limit.up.sql",
        "sqlite3/2021010107_create_recordbook.up.sql",
        "sqlite3/2021010108_create_study_record.up.sql",
        "sqlite3/2021010109_create_study_stat.up.sql",
        "sqlite3/2021010201_insert_problem_type.up.sql",
        "sqlite3/2021010202_insert_study_type.up.sql",
        "sqlite3/2022010101_create_english_sentence_problem.up.sql",
        "sqlite3/2022010102_create_english_phrase_problem.up.sql",
        "sqlite3/2022010103_create_english_word_problem.up.sql",
    ],
    importpath = "github.com/pecolynx/golang-structure/src/sqls",
    visibility = ["//visibility:public"],
)
