load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "converter",
    srcs = ["article_converter.go"],
    importpath = "github.com/pecolynx/golang-structure/src/controller/converter",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/domain",
        "//lib/errors",
        "//src/controller/entity",
        "//src/domain",
    ],
)
