load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "entity",
    srcs = ["article_entity.go"],
    importpath = "github.com/pecolynx/golang-structure/src/controller/entity",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/domain",
        "//lib/errors",
        "//src/domain",
    ],
)
