load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "middleware",
    srcs = [
        "init.go",
        "tracelog_middleware.go",
        "wait_middleware.go",
    ],
    importpath = "github.com/pecolynx/golang-structure/src/controller/middleware",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_gin_gonic_gin//:gin",
        "@io_opentelemetry_go_otel//:otel",
        "@io_opentelemetry_go_otel_trace//:trace",
    ],
)
