load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "service",
    srcs = [
        "article.go",
        "article_repository.go",
        "repository_factory.go",
        "transaction.go",
    ],
    importpath = "github.com/pecolynx/golang-structure/src/service",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/domain",
        "//lib/errors",
        "//src/domain",
    ],
)
